# mh-neuron

./: .gitignore  CLAUDE.md  README.md  RESULTS_LOG.md  SESSION_HANDOFF.md  new_worktree.sh
modality_taxonomy/: .gitignore  CLAUDE.local.md  CLAUDE.md  pmbt_mask_demo.html  pyproject.toml  run_baselines.sh  triviaqa_util.py
modality_taxonomy/.claude/: settings.json  settings.local.json.bak
modality_taxonomy/code/: 2_old.sh  a1_2x2_dispatch.sh  a1_complete.sh  a1_early_dispatch.sh  a1_extract.sh  a2_3model_dispatch.sh  a2b_llava_cleanup.sh  a2b_llava_dispatch.sh  a2b_llava_extract.sh  a2b_llava_round1_complete.sh  a3_bound_dispatch.sh  a3_grid_dispatch.sh  a3_grid_dispatch_qwen_idefics.sh  a3_grid_extract.py  a3_grid_extract_all.py  a3_grid_extract_v2.py  a3_grid_extract_v3.py  a3_new_best_comparison.py  a3_qwen_a09_scope_dispatch.sh  a3_scope_variants_dispatch.sh  a3_scope_variants_dispatch_qw_idf.sh  a3_scope_variants_extract.py  aggregate_effect_table.py  attention_analysis.py  build_cf_paired_data.py  cf_classify.py  check_shapes.py  check_token_collisions.py  clean_descriptions.py  combine_fig3_hooks.py  compare_hook_points.py  compute_brv_splits.py  create_ablated_checkpoints.py  debug_q253_gpu.py  deploy_llava_hf.sh  deploy_lo_triviaqa_fix.sh  dispatch_cf_sharded.sh  dissociation_analysis.py  dissociation_test.py  downproj_table.tex  (+124 more)
modality_taxonomy/modern_vlms/: main.py  pyproject.toml
modality_taxonomy/notes/: enrichment_handoff_cett_cache_guard.md  internvl_handoff_generation_mixin.md  local_results_supplement_2026-06-03.md  (+5 more)
notes/: enrichment_results.tex  (+8 more)
(+24 files in other folders)
