[project]
name = "modern-vlms"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "transformers>=4.49.0",
    "tokenizers>=0.21.0",
    "accelerate>=0.26.0",
    "huggingface-hub>=0.23.0",
    "qwen-vl-utils>=0.0.8",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "sentencepiece",
    "pillow",
    "numpy",
    "tqdm",
    "baukit",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit" }

[tool.uv]
package = false
override-dependencies = [
    "triton ; python_version < '0'",
]
